--- a/modules/employee-recognitions-mvc/build.gradle
+++ b/modules/employee-recognitions-mvc/build.gradle
@@ -1,4 +1,7 @@
 dependencies {
+
+ 	compile project(":modules:employee-recognition-service:employee-recognition-service-api")
+ 	
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.1.0"
